[package]
name = "hyperdav-server"
version = "0.1.0"
authors = ["Tyler Hall <tylerwhall@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/tylerwhall/hyperdav-server"
homepage = "https://github.com/tylerwhall/hyperdav-server"
description = "Basic WebDAV server as a hyper server handler."

[dependencies]
chrono = "0.3"
env_logger = "0.4"
hyper = "0.10"
log = "0.3"
url = "1.4"
xml-rs = "0.6"
